# p2p-file-sharing

./: Cargo.toml
src/: main.rs
src/behaviour/: behaviour.rs
src/cli/: cli.rs
src/core/: event_loop.rs  mod.rs  reader.rs  setup.rs
src/network/: network.rs
